2007-07-14  Zoltan Varga  <vargaz@gmail.com>

	* ModuleHandle.cs: Add stubs for generic ResolveXXXHandle () methods.

2007-07-10  Alan McGovern <amcgovern@novell.com>

	* Guid.cs: All whitespace should be trimmed from before and
	after a string passed into the Guid constructor. Fixes #81958

2007-07-10  Zoltan Varga  <vargaz@gmail.com>

	* RuntimeTypeHandle.cs: Fix signatures of == and != operators.

	* ModuleHandle.cs: Add missing 2.0 stuff.

2007-07-08  Zoltan Varga  <vargaz@gmail.com>

	* *.cs: Add missing ComVisible attributes.

	* Delegate.cs: Add missing 2.0 CreateDelegate () methods.

2007-07-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* DateTime.cs: In ParseExact, throw ArgumentNullException if format
	is null; throw FormatException if formats array is empty or if one of
	items is null or a zero-length string.

2007-07-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* Double.cs (Parse): Fix for string ending in garbaga, it was just ignoring it
	instead of throwing FormatException. Fixes #81777

2007-07-06  Rodrigo Kumpera  <rkumpera@novell.com>

	* Double.cs (Parse): Fix for whitespace only strings, it was returning zero 
	instead of throwing FormatException. Fixes #81630 

2007-07-06  Alan McGovern  <amcgovern@novell.com>

	* DateTime.cs: If the format is null or empty, it should default to 'G'.
	Fixes bug 81778

2007-07-06  Jonathan Chambers  <joncham@gmail.com>

	* __ComObject.cs: Support ExtensibleClassFactory.


2007-07-06  Aaron Bockover  <abockover@novell.com>

	* Environment.cs (InternalGetFolderPath): Try reading some
	paths from ~/.config/user-dirs.dirs (XDG user dirs spec);
	always return something for MyPictures

2007-07-04  Atsushi Enomoto  <atsushi@ximian.com>

	* Type.cs : 2.0 TypeHandle and ContainsGenericParameters are virtual
	  (required fix for 2.0 reflection API fixes).

2007-06-22  Jonathan Chambers  <joncham@gmail.com>

	* __ComObject.cs: Move interface lookup to unmanaged.

2007-06-21  Zoltan Varga  <vargaz@gmail.com>
